--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>Rock Paper Scissor</title>
 </head>
-<body class ="bg-yellow">
-    <div class="container mx-auto bg-yellow align-center">     
-        <h1>Let's play Rock, Papers, Scissors<br>Can you beat the computer</h1><br>    
+<body class ="container mx-auto" id="bg">
+        <h1>Let's play Rock, Papers, Scissors<br>Can you beat the MA(chi)N?</h1><br>    
         <select id="myChoice" onchange="RBS()">
             <option>Your choice, player!</option>
             <option value="rock">Rock</option>
@@ -25,7 +24,6 @@
         <div class="mb-4"></div> 
         <h4 class="ml-4 mb-4">Computers choice:</h4>
         <h4 class="flex mt-4" id="cchoice"></h4>    
-        <h3 class="mt-5 ml-2 p-6"><h3 id="winner"></h3>
-    </div>
+        <h3 class="ml-2 p-4"><h3 id="winner"></h3>
 </body>
 </html>
